button type="button"으로 수정
button type="button"으로 리프레쉬 되는 현상 수정

--- a/shopping-mall.html
+++ b/shopping-mall.html
@@ -107,7 +107,7 @@
 					<label for="exampleInputTel">전화번호 :</label>
 					<input type="text" class="form-control" id="exampleInputTel" placeholder="'-'를 제외하고 적어주세요." aria-describedby="basic-addon1">
 				</div>
-				<button onclick="order()" class="btn btn-primary">주문하기</button>
+				<button type="button" onclick="order()" class="btn btn-primary">주문하기</button>
 			</form>
 			<table>
 				<colgroup>
