주문완료 후 입력값 초기화 수정
reset() 이용하여 입력값 초기화
불필요한 부분 삭제

--- a/shopping-mall.html
+++ b/shopping-mall.html
@@ -12,7 +12,7 @@
 	<!-- JQuery를 import 합니다 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
-		function order(reset) {
+		function order() {
 			let name = $('#exampleInputName').val();
 			let count = $('#exampleFormControlSelect1').val();
 			let addr = $('#exampleInputAddr').val();
